[package]
name = "btrader"
version = "0.2.0"
authors = ["Gabriel Gazola Milan <gabriel.gazola@poli.ufrj.br>"]
edition = "2018"
description = "Arbitrage trading bot for Binance"
homepage = "https://github.com/gabriel-milan/btrader"
repository = "https://github.com/gabriel-milan/btrader"
license="GPL-3.0"
keywords=["bot", "algotrading", "cryptocurrencies", "binance", "bitcoin", "arbitrage"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance = { git = "https://github.com/gabriel-milan/binance-rs.git" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
log = "0.4"
simple_logger = "1.11"
rayon = "1.5"
dashmap = "3.11"
queues = "1.1"
retain_mut = "0.1"
indicatif = "0.15"
console = "0.13"
rand = "0.7"

[lib]
name = "btrader"
path = "src/lib.rs"